<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
        <ToggleButton
            android:id="@+id/toggle_button_all"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_all"
            android:textOn="@string/category_all"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:checked="true"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_bag"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_bag"
            android:textOn="@string/category_bag"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_saree"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_saree"
            android:textOn="@string/category_saree"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_furniture"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_furniture"
            android:textOn="@string/category_furniture"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_shawl"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_shawl"
            android:textOn="@string/category_shawl"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_jewellery"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_jewellery"
            android:textOn="@string/category_jewellery"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_pillow"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_pillow"
            android:textOn="@string/category_pillow"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        <ToggleButton
            android:id="@+id/toggle_button_others"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:textOff="@string/category_others"
            android:textOn="@string/category_others"
            android:background="@drawable/product_category_button_selector"
            android:textColor="@drawable/product_category_button_selector"
            android:layout_marginEnd="8dp"
            />
        </LinearLayout>
    </HorizontalScrollView>
    <ProgressBar
        android:id="@+id/product_list_progressbar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/product_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>